--- a/src/App.css
+++ b/src/App.css
@@ -63,22 +63,7 @@
   border-bottom-right-radius: 0;
 }
 
-.claim-btn {
-  background: white;
-  border: none;
-  padding: 12px 24px;
-  color: black;
-  font-size: 1em;
-  cursor: pointer;
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-  transition: transform 0.2s, box-shadow 0.2s;
-  border-top-left-radius: 0;
-  border-bottom-left-radius: 0;
-  border-top-right-radius: 50px;
-  border-bottom-right-radius: 50px;
-}
-
-.instructions-btn:hover, .claim-btn:hover {
+.instructions-btn:hover{
   transform: translateY(-2px);
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
 }
